ubiquity (2.11.8) UNRELEASED; urgency=low

  [ James M. Leddy ]
  * Only allow a user to proceed on the networking screen if he entered a valid
    password. This prevents a nm dbus exception. (LP: #112211)

 -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 27 Jun 2012 17:45:36 -0400

ubiquity (2.11.7) quantal-proposed; urgency=low

  [ Colin Watson ]
  * Remove hardcoded paths to xfsettingsd and various accessibility tools.
  * Automatic update of included source packages: clock-setup 0.112ubuntu1,
    debian-installer-utils 1.91ubuntu1, flash-kernel 3.0~rc.4ubuntu4,
    partman-base 156ubuntu1, partman-basicfilesystems 74ubuntu1,
    partman-btrfs 9ubuntu1, partman-ext3 70ubuntu1, preseed 1.51ubuntu1.

  [ Harald Sitter ]
  * Fix bogus attribute access in usersetup plugin leading to crashes with
    the KDE frontend (LP: #1008255)

  [ Oliver Grawert ]
  * adjust arm bootloader installation, we have not used this part of ubiquity
    in some years and everything was outdated

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 26 Jun 2012 11:12:34 +0100

ubiquity (2.11.6) quantal; urgency=low

  [ Dmitrijs Ledkovs ]
  * Run debconf-updatepo to remove migration-assistant translations.

  [ Alan Bell ]
  * Adjust the default use_device_title label to make more sense when read
    by screen readers (LP: #1010179).

  [ Stéphane Graber ]
  * Port ubiquity-bluetooth-agent from the old python-gobject to the
    gi version of gobject as required with python3. (LP: #1013172)

  [ Matthew Paul Thomas ]
  * Improvements to the third-party software text:
    - Changes "display" to "play" (since MP3 is about audio, not video).
    - Adds mention of graphics drivers (because the installer may install a
      Nvidia proprietary driver).
    - Changes "wireless" to "wi-fi".
    - Changes "closed-source" to "proprietary", matching Ubuntu Software
      Center.
    - Removes repetition of "the software", by changing "the software's
      documentation" to "its documentation".
