@@ -4,6 +4,10 @@ ubiquity (2.11.8) UNRELEASED; urgency=low
   * Only allow a user to proceed on the networking screen if he entered a valid
     password. This prevents a nm dbus exception. (LP: #112211)
 
+  [ Mario Limonciello ]
+  * Don't let oem-config crash from an invalid server return on the timezone
+    page.
+
  -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 27 Jun 2012 17:45:36 -0400
 
 ubiquity (2.11.7) quantal-proposed; urgency=low
